@@ -38,13 +38,13 @@
 		<a href='javascript: history.go(-1)'>{% trans 'Back' %}</a>
 	
 		<div id="searchForm">
-			<form action="/search/{{current_version}}/" method="post">
-				<input type="text" name="q" value="{{ term }}" checked="true" size="50" style="font-size:large;"/>&nbsp;<button type="submit">{% trans 'Search' %}</button><br />
+			<form action="/search/{{current_version}}/" method="GET">
+				<input type="text" name="q" value="{{ term }}" checked="false" size="50" style="font-size:large;"/>&nbsp;<button type="submit">{% trans 'Search' %}</button><br />
 
 			{% if group %}
 				<input type="checkbox" name="group" value="yes" checked="true"/>{% trans 'Group Packages' %}
 			{% else %}
-				<input type="checkbox" name="group" value="yes" checked="false"/>{% trans 'Group Packages' %}
+				<input type="checkbox" name="group" value="yes"/>{% trans 'Group Packages' %}
 			{% endif %}
 			
 			</form>
